; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_utils.c_find_float_arg.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_utils.c_find_float_arg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @find_float_arg(i32 %0, i8** %1, i8* %2, float %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca float, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8** %1, i8*** %6, align 8
  store i8* %2, i8** %7, align 8
  store float %3, float* %8, align 4
  store i32 0, i32* %9, align 4
  br label %10

10:                                               ; preds = %49, %4
  %11 = load i32, i32* %9, align 4
  %12 = load i32, i32* %5, align 4
  %13 = sub nsw i32 %12, 1
  %14 = icmp slt i32 %11, %13
  br i1 %14, label %15, label %52

15:                                               ; preds = %10
  %16 = load i8**, i8*** %6, align 8
  %17 = load i32, i32* %9, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i8*, i8** %16, i64 %18
  %20 = load i8*, i8** %19, align 8
  %21 = icmp ne i8* %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %15
  br label %49

23:                                               ; preds = %15
  %24 = load i8**, i8*** %6, align 8
  %25 = load i32, i32* %9, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i8*, i8** %24, i64 %26
  %28 = load i8*, i8** %27, align 8
  %29 = load i8*, i8** %7, align 8
  %30 = call i64 @strcmp(i8* %28, i8* %29)
  %31 = icmp eq i64 0, %30
  br i1 %31, label %32, label %48

32:                                               ; preds = %23
  %33 = load i8**, i8*** %6, align 8
  %34 = load i32, i32* %9, align 4
  %35 = add nsw i32 %34, 1
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i8*, i8** %33, i64 %36
  %38 = load i8*, i8** %37, align 8
  %39 = call float @atof(i8* %38)
  store float %39, float* %8, align 4
  %40 = load i32, i32* %5, align 4
  %41 = load i8**, i8*** %6, align 8
  %42 = load i32, i32* %9, align 4
  %43 = call i32 @del_arg(i32 %40, i8** %41, i32 %42)
  %44 = load i32, i32* %5, align 4
  %45 = load i8**, i8*** %6, align 8
  %46 = load i32, i32* %9, align 4
  %47 = call i32 @del_arg(i32 %44, i8** %45, i32 %46)
  br label %52

48:                                               ; preds = %23
  br label %49

49:                                               ; preds = %48, %22
  %50 = load i32, i32* %9, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %9, align 4
  br label %10

52:                                               ; preds = %32, %10
  %53 = load float, float* %8, align 4
  ret float %53
}

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local float @atof(i8*) #1

declare dso_local i32 @del_arg(i32, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
